# tracedata-ai-ml

./: .gitignore  README.md  mlflow.db  mlops_config.yaml  production_mlops.yaml  pyproject.toml  run_mlops_training.bat  run_mlops_training.sh
.github/workflows/: ci-scheduled.yml  ci.yml  release-package.yml
AIVTK2/: README.md
AIVTK2/docker/: .env.example  Dockerfile  docker-compose.yml
AIVTK2/docs/: SETUP.md  TABULAR_INPUT_PREP.md
AIVTK2/scripts/: prepare-tabular.ps1  prepare_tabular_inputs.py  run-aivt2.ps1
data/: test.csv  train.csv  val.csv
docs/: AGENTIC_SCORING_DEPLOYMENT.md  AIVT2_COMPLIANCE.md  AIVT2_DOCKER_SETUP.md  DATA_FLOW.md  FEATURE_ENGINEERING.md  GETTING_STARTED.md  MLFLOW_PARALLEL_COORDINATES.md  MLOPS_GUIDE.md  ML_MODEL_SINGLE_FILE_REFERENCE.py  README.md  SCORING_PATHS.md  SHAP_EXPLAINABILITY.md  ml_pipeline_guide.md  strategy.md  walkthrough.md
docs/diagrams/: aivt2_compliance_flow.mmd
models/: smoothness_model.joblib  smoothness_model_run_a.joblib  smoothness_model_run_b.joblib  smoothness_model_run_c.joblib  smoothness_tune_pass01.joblib  smoothness_tune_pass02.joblib  smoothness_tune_pass03.joblib  smoothness_tune_pass04.joblib  smoothness_tune_pass05.joblib
reports/: feature_importance.json  metadata.json
scripts/: run-ci.ps1  score_10min_window.py
scripts/sample_serving/: background_features.json  model_contract.json
src/compliance/: __init__.py  aivt2_runner.py
src/core/: celery_app.py  config.py  device_window_features.py  experiment_tracker.py  explain.py  fairness.py  features.py  model_contract.py  scoring.py  smoothness_ml_engine.py
src/inference/: __init__.py  device_trip_scorer.py  smoothness_inference.py
tests/: test_api.py  test_device_trip_scorer.py  test_device_window_features.py  test_features.py  test_smoothness_inference_trip.py
tmp/: run_production_tune_passes.py
(+26 files in other folders)
