[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tracedata-ai-ml"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "aif360>=0.6.1",
    "joblib>=1.5.3",
    "lime>=0.2.0.1",
    "matplotlib>=3.10.8",
    "mlflow>=3.11.1",
    "numpy>=1.26.4,<2",
    "pandas>=2.3.3",
    "pytest>=9.0.3",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "shap>=0.48.0",
    "xgboost>=3.2.0",
]

[project.scripts]
tracedata-mlops = "src.mlops.cli:entrypoint"

[project.optional-dependencies]
dev = [
    "bandit[toml]>=1.8.0",
    "black>=24.10.0",
    "mypy>=1.13.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
markers = [
    "integration: requires a running external service (e.g. API on localhost:8000)",
]

[tool.black]
target-version = ["py311"]
line-length = 100

[tool.ruff]
line-length = 100

[tool.bandit]
# Column lists are built from internal feature name lists, not user input.
skips = ["B608"]
